--- a/app/src/main/res/layout/activity_hand.xml
+++ b/app/src/main/res/layout/activity_hand.xml
@@ -8,14 +8,11 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/etText"/>
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn"/>
+        />
 
 </LinearLayout>
